--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@
 }
 body{
   background: var(--bg-url) no-repeat top center/cover;
+  
+  height: 100vh;
 }
 
 body *{
@@ -31,9 +33,9 @@ body *{
 }
 
 #container{
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   margin: 56px auto 0px;
-  margin-top: 56px;
   padding: 0 24px;
 }
 
@@ -165,4 +167,13 @@ footer {
   text-align: center;
   padding: 24px 0;
   font-size: 14px;
+}
+
+@media (min-width: 700px) {
+  :root{
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
